# memfree

./: .eslintrc.js  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contribution.md  LICENSE  README-ZH.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_ZH.md  SECURITY.md  package.json  pre-commit.txt  zeabur.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
README/: README-ZH.md
embedding/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.template.toml
embedding/src/: main.rs
extention/: .gitignore  background.js  bun.lockb  contentScript.js  index.css  manifest.json  out.js  package.json  popup.html  popup.js  tailwind.config.js
frontend/: .eslintrc.json  .gitignore  .prettierrc  README.md  TESTING_GUIDELINES.md  auth.ts  bun.lockb  components.json  config.ts  contentlayer.config.ts  env-example  jest.config.js  middleware.ts  netlify.toml  next.config.js  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json  vercel.json
mdreader/: .gitignore  Dockerfile  browser.ts  bun.lockb  fly.template.toml  index.ts  package.json  reader.ts  screenshot.ts
queue/: .gitignore  bun.lockb  index.ts  package.json  queue.ts  utils.ts
scripts/: .gitignore  README.md  bun.lockb  change-user.ts  change-vector-embedding.ts  get-user-id.ts  get-user.ts  index.ts  package.json  re-index.ts  redis.ts  remove-subscription.ts
searxng/: .gitignore  Dockerfile.searxng  uwsgi.ini  (+2 more)
(+682 files in other folders)
