[package]
name = "memfree-embedding"
version = "0.1.0"
edition = "2021"

[dependencies]
fastembed = "3.7.0"
anyhow = "1.0"
axum = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }